Source/JavaScriptCore/ftl/FTLCapabilities.cpp
@@ -439,6 +439,12 @@ CapabilityLevel canCompile(Graph& graph)
             dataLog("FTL rejecting ", *graph.m_codeBlock, " because it doesn't belong to a function.\n");
         return CannotCompile;
     }
+
+    if (UNLIKELY(graph.m_codeBlock->ownerScriptExecutable()->neverFTLOptimize())) {
+        if (verboseCapabilities())
+            dataLog("FTL rejecting ", *graph.m_codeBlock, " because it is marked as never FTL compile.\n");
+        return CannotCompile;
+    }
     
     CapabilityLevel result = CanCompileAndOSREnter;
     
